--- a/src/app/shared/component/loading-screen/loading-screen.component.scss
+++ b/src/app/shared/component/loading-screen/loading-screen.component.scss
@@ -2,7 +2,9 @@
 
 .loading-screen-wrapper {
   z-index: 100000;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   background-color: $color-black;
   width: 100%;
   height: 100%;
