--- a/src/app/popup/popup/popup.component.html
+++ b/src/app/popup/popup/popup.component.html
@@ -16,7 +16,7 @@
 
 <div *ngIf="type === 'link'" class="popup-container link">
   <p class="font-desc">
-    받는 분께 링크를 공유해주세요.<br />2023년 1월 1일 자정부터 열람이 가능해요.
+    받는 분께 링크를 공유해주세요.<br />2023년 1월 1일부터 볼 수 있어요.
   </p>
   <div class="button-wrapper">
     <button (click)="onCopyClipboard()" class="button-share">
