--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <router-outlet></router-outlet>
 <app-popup *ngIf="isPopup"></app-popup>
-<app-loading-screen></app-loading-screen>
+<loading-screen></loading-screen>
