--- a/src/app/viewer/component/card-viewer/card-viewer.component.scss
+++ b/src/app/viewer/component/card-viewer/card-viewer.component.scss
@@ -65,6 +65,13 @@
   }
 }
 
+.envelop-opening {
+  width: 400px;
+  height: 400px;
+  margin-bottom: 100px;
+  position: relative;
+}
+
 .envelop:hover {
   -webkit-animation-name: shakeAnimation;
   -webkit-animation-duration: 0.4s;
@@ -101,6 +108,13 @@
   }
 }
 
+.font-desc2 {
+  position: fixed;
+  bottom: 120px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @include mobile {
   .font-h1-kr {
     margin: 0 0 -4px 0;
@@ -125,4 +139,195 @@
       display: none;
     }
   }
+}
+
+.preview-container {
+  padding-bottom: 120px;
+  min-width: 1000px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  // z-index: 2;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 50px;
+
+  .font-h1-kr {
+    margin: 0 0 -17px 0;
+  }
+
+  .info-icon {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 65px;
+    top: 7px;
+    background: url("/assets/icon-info.png") no-repeat;
+    background-size: 100% 100%;
+    background-position: center center;
+    cursor: pointer;
+  }
+}
+
+.preview {
+  height: 600px;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  position: relative;
+  pointer-events: none;
+  transition: height 0.5s 1s ease-in-out;
+}
+
+.selected-motion {
+  -webkit-animation-name: cssAnimation;
+  -webkit-animation-duration: 0.4s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-name: cssAnimation;
+  animation-duration: 0.4s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes cssAnimation {
+  0% {
+    -webkit-transform: rotate(0deg) scale(1) skew(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(5deg) scale(1) skew(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg) scale(1) skew(0deg);
+  }
+}
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  height: 600px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 1s;
+  transition-delay: 0.3s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card.flipped .flip-card-inner {
+  transform: rotateY(180deg) scale(1);
+}
+
+// [workaround] 프리뷰 모드일때 토글하기
+.flip-card.active-preview .flip-card-inner {
+  transform: rotateY(180deg) scale(1);
+
+  .preview {
+    height: 800px;
+  }
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  min-width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  color: black;
+  height: 600px;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  transform: rotateY(180deg);
+}
+
+:host ::ng-deep .active-preview .text-preview {
+  opacity: 1;
+}
+
+@include mobile {
+  .title {
+    top: 20px;
+
+    .font-h1-kr {
+      margin: 0 0 -10px 0;
+    }
+  }
+
+  .preview-container {
+    padding-bottom: 180px;
+    min-width: 100vw;
+    position: fixed;
+    top: 100px;
+  }
+
+  .preview {
+    height: 400px;
+  }
+
+  .flip-card {
+    background-color: transparent;
+    height: 400px;
+    perspective: 100vw; /* Remove this if you don't want the 3D effect */
+  }
+
+  // [workaround] 프리뷰 모드일때 토글하기
+  .flip-card.active-preview .flip-card-inner {
+    transform: rotateY(180deg) scale(1);
+
+    .preview {
+      height: 500px;
+    }
+  }
+
+  /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+  .flip-card {
+    background-color: transparent;
+    height: 400px;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+
+  /* Style the back side */
+  .flip-card-back {
+    height: 400px;
+  }
+
+  .font-desc2 {
+    position: fixed;
+    bottom: 80px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+@include tablet {
+}
+
+@include desktop {
 }
